postgresql/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: postgresql
  namespace: mormoroth
  labels:
    app: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      volumes:
        - name: postgresql-vol
          persistentVolumeClaim:
            claimName: postgresql-vol
      containers:
        - resources:
            limits:
              cpu: '2'
              ephemeral-storage: 2G
              memory: 2G
            requests:
              cpu: '2'
              ephemeral-storage: 2G
              memory: 2G
          terminationMessagePath: /dev/termination-log
          name: postgresql
          ports:
            - containerPort: 5432
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: postgresql-vol
              mountPath: /var/lib/postgresql/data
          terminationMessagePolicy: File
          image: 'postgres:9.5.21'
        - name: postgresql-adminer
          image: 'adminer:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              ephemeral-storage: 500M
              memory: 500M
            requests:
              cpu: 500m
              ephemeral-storage: 500M
              memory: 500M
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
